All The project

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,26 @@
         {% endblock %}
     </head>
     <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">{{ 'Your Web App'|trans }}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">{{ 'Home'|trans }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/note">{{ 'Note'|trans }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/matiere">{{ 'Matiere'| trans }}</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
         {% block body %}{% endblock %}
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
