--- a/templates/matiere/edit.html.twig
+++ b/templates/matiere/edit.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Card{% endblock %}
+{% block title %}{{ 'Modifier Matiere'| trans }}{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
-        <h1>Edit Card</h1>
+        <h1>{{ 'Modifier Matiere'| trans }}</h1><br><br>
 
         {# Responsive Bootstrap Form #}
         {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
         <div class="form-group row">
-            {{ form_label(form.nom, 'Matiere Name', {'label_attr': {'class': 'col-sm-2 col-form-label'}}) }}
+            {{ form_label(form.nom, 'Matiere', {'label_attr': {'class': 'col-sm-2 col-form-label'}}) }}
             <div class="col-sm-10">
                 {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
             </div>
@@ -23,16 +23,19 @@
             </div>
         </div>
 
-        <div class="form-group row">
-            <div class="col-sm-10 offset-sm-2">
-                <button type="submit" class="btn btn-primary">Enregistrer</button>
-                <button href="route" class="btn btn-warning">Supprimer</button> 
-            </div>
-        </div>
+        
 
         {{ form_end(form) }}
         {# End of Form #}
+<div class="form-group row">
+            <div class="col-sm-10 offset-sm-2"><br>
+                <button type="submit" class="btn btn-primary">{{ 'Enregistrer'|trans }}</button>
+                <a href="{{ path('app_delete', {'id': matieres.id}) }}">
+                    <button class="btn btn-warning">{{ 'Supprimer'|trans }}</button>
+                </a>
 
+            </div>
+        </div>
         {# Responsive Bootstrap Card #}
         
             <div class="card-body">
