--- a/templates/matiere/index.html.twig
+++ b/templates/matiere/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MatiereController!{% endblock %}
+{% block title %}{{ 'Hello MatiereController!'| trans}} {% endblock %}
 
 {% block body %}
 
 <div class="container mt-4">
-    <h1>Your Form Title</h1>
+    <h1>{{ 'Vos Matieres'|trans }}</h1>
 
     <form method="post" class="mt-4">
         {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
@@ -13,20 +13,20 @@
         <div class="form-group">
             {{ form_errors(form) }}
 
-            <label for="{{ form.nom.vars.id }}" class="control-label">Matiere Name</label>
+            <label for="{{ form.nom.vars.id }}" class="control-label"><b>{{ 'Matiere'| trans }}</b></label>
             <div class="input-group">
                 {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
             </div>
         </div>
 
         <div class="form-group">
-            <label for="{{ form.coefficient.vars.id }}" class="control-label">Coefficient</label>
+            <label for="{{ form.coefficient.vars.id }}" class="control-label"><b>{{ 'Coefficient'| trans }}</b></label>
             <div class="input-group">
                 {{ form_widget(form.coefficient, {'attr': {'class': 'form-control'}}) }}
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary">Inserer</button>
+        <button type="submit" class="btn btn-primary">{{ 'Inserer' | trans }}</button>
 
         {{ form_end(form) }}
     </form>
@@ -39,8 +39,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title"> {{ element.nom }} </h5>
-                            <p class="card-text"> Coefficient: {{ element.coefficient }}</p>
-                            <a href="{{ path('app_edit', {'id': element.id}) }}" class="btn btn-primary">Edit</a>
+                            <p class="card-text"> <b>{{ 'Coefficient'| trans }}</b>: {{ element.coefficient }}</p>
+                            <a href="{{ path('app_edit', {'id': element.id}) }}" class="btn btn-primary">{{ 'Modifier'| trans }}</a>
                         </div>
                     </div>
                 </div>
